# JacobiSetComputation

./: CMakeLists.txt  LICENSE  README.md  install_deps.sh
include/: JacobiSet.h  TriMeshJ.h  sos_utils.h
src/: JacobiSet.cpp  TriMeshJ.cpp  main.cpp
utilities/: jstovtk.py
